src/objects/c2g__AllocSchedule__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationscheduler</customHelpPage>
    <description>A scheduled allocation of templates to be run.</description>
    <fields>
        <fullName>c2g__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__After__c</fullName>
        <defaultValue>0</defaultValue>
        <label>After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Allocation Schedules</relationshipLabel>
        <relationshipName>AllocSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DaysBeforeOrAfterRunDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Before Or After Run Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DaysPriorToToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Prior To To Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__EndDateGenerated__c</fullName>
        <label>End Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__FromDate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(c2g__TotalNumberOfErrors__c = c2g__TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(c2g__TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( c2g__TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodOption__c</fullName>
        <label>Period Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RunDate</fullName>
                </value>
                <value>
                    <fullName>TransactionDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PostingDateOption__c</fullName>
        <label>Posting Date Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
                <value>
                    <fullName>OffsetDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PostingDate__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__PostingOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Posting Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PreviousFireTime__c</fullName>
        <label>Previous Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__PreviousToDate__c</fullName>
        <label>Previous To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsByMonth__c</fullName>
        <label>Retrieve Transactions By Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Last3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsByPeriod__c</fullName>
        <label>Retrieve Transactions By Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Last3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsOption__c</fullName>
        <label>Retrieve TransactionsOption Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RetrieveTransactionsSpecificDates</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsByPeriod</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsByMonth</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromFirstTransaction</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromDaysPriorToToDate</fullName>
                </value>
                <value>
                    <fullName>RetrieveTransactionsFromLastDates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ScheduleExpiresOption__c</fullName>
        <label>Schedule Ends</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>EndBy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ToDate__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocScheduleLog__c.c2g__AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocScheduleLog__c.c2g__AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocScheduleLog__c.c2g__AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryFilterItems>
            <field>c2g__AllocScheduleLog__c.c2g__IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocScheduleLog__c.c2g__AllocSchedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDescription__c</fullName>
        <label>Transaction description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UserDefinedName__c</fullName>
        <description>The name of the scheduled allocation</description>
        <label>User Defined Name</label>
        <length>243</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Allocation Schedule</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>